# ZipLin3

./: .gitignore  README.md  dev.ipynb  log.txt  pyproject.toml  ziplin3.py
src/: pyproject.toml
src/ziplin3/: cli.py  client.py  detatched.py
ziplin3/: banner  cli.py
