[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ziplin3"
version = "1.0.0"
authors = [
  { name="B0-B", email="alch3mist94@protonmail.com" },
]
description = "Interface software for local and remote backups via ssh."
readme = "README.md"
requires-python = ">=3.10.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
dependencies = [
  "paramiko>=3.3.1",
  "cryptography>=41.0.3"
]

[project.urls]
Homepage = "https://github.com/B0-B/blowtorch-transformer-api"
Examples = "https://github.com/B0-B/blowtorch-transformer-api/tree/main/examples"
Latest = "pip install https://b0-b.github.io/blowtorch-transformer-api/dist/"